# Agentic-BFF

./: Cargo.toml  users.db
src/: auth.rs  main.rs  middleware.rs  models.rs  state.rs
src/controllers/: chat_controller.rs  init_controller.rs  mod.rs  user_controller.rs
src/services/: chat_service.rs
