[package]
name = "Agentic-BFF"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-rt = "2.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
password-hash = "0.5"
uuid = { version = "1.7", features = ["v4"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
jsonwebtoken = "9"
argon2 = "0.5"
once_cell = "1"
futures-util = "0.3"
reqwest = { version = "0.12.21", features = ["json", "stream"] }
base64ct = "1.7.1"
rand = "0.8"

actix-service = "2"
env_logger = "0.11"
log = "0.4"